Bug 154771 - Copying columns when moving multiple selected columns in Writer.
Summary: Copying columns when moving multiple selected columns in Writer.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords:
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2023-04-12 10:52 UTC by NISZ LibreOffice Team
Modified: 2023-04-24 08:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-04-12 10:52:10 UTC
Description:
Error when moving multiple selected columns in Writer.

When you select multiple columns from a table in Writer and then move the selected columns, Writer runs into an error. In this case, only the first column is moved, the others are copied. That is, all the others except the first column remain in their original position.



Steps to Reproduce:
1: Create a 5x5 table in Writer.
2: Select the first table by using the down arrow above the cell. Hold it down and use this method to select more columns.
3: Place the selected columns in another cell.

Actual Results:
Move only the first column, copy the others.

Expected Results:
Move all selected columns.


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 Commit Notification 2023-04-12 14:02:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a62e50d72bdcc786df4ea6094b349d1b3215b56

tdf#154771 sw: fix drag & drop moving of table columns

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-04-12 17:08:40 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1bf651f34b1e3abb5cbaf6b810aa0b0d9ee86368

tdf#154771 sw: fix drag & drop moving of table columns

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2023-04-24 08:32:36 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded