tdf#154771 sw: fix drag & drop moving of table columns

Only first selected column was moved, the other ones
were copied during drag & drop moving of table columns.

Regression from commit 5e8aa259e48d5602b932353bb146ebb523982cf2
"tdf#146967 sw table: fix freezing in Hide Changes mode".

Follow-up to commit 912336f3c85d9a631fa0ac0f270bab04b204f619
"tdf#154599 sw: fix crash at drag & drop table columns".

Change-Id: I31ca5b3d6004ed53c11a951fa184b9db48f21041
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150280
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 49f80aedf3f2dff70aa410319e80e8622dfa31a1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150207
Tested-by: László Németh <nemeth@numbertext.org>